librocksdb_sys/bindings/aarch64-unknown-linux-gnu-bindings.rs

extern "C" {
    pub fn crocksdb_options_statistics_get_histogram(
        opt: *mut crocksdb_options_t,
        type_: u32,
        median: *mut f64,
        percentile95: *mut f64,
        percentile99: *mut f64,
        average: *mut f64,
        standard_deviation: *mut f64,
        max: *mut f64,
    ) -> libc::c_uchar;
}
extern "C" {
    pub fn crocksdb_options_set_max_write_buffer_number(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_set_min_write_buffer_number_to_merge(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_set_max_write_buffer_number_to_maintain(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_set_max_background_jobs(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_get_max_background_jobs(arg1: *const crocksdb_options_t)
        -> libc::c_int;
}
extern "C" {
    pub fn crocksdb_options_set_max_log_file_size(arg1: *mut crocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn crocksdb_options_set_log_file_time_to_roll(arg1: *mut crocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn crocksdb_options_set_keep_log_file_num(arg1: *mut crocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn crocksdb_options_set_recycle_log_file_num(arg1: *mut crocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn crocksdb_options_set_soft_rate_limit(arg1: *mut crocksdb_options_t, arg2: f64);
}
extern "C" {
    pub fn crocksdb_options_set_hard_rate_limit(arg1: *mut crocksdb_options_t, arg2: f64);
}
extern "C" {
    pub fn crocksdb_options_set_soft_pending_compaction_bytes_limit(
        opt: *mut crocksdb_options_t,
        v: usize,
    );
}
extern "C" {
    pub fn crocksdb_options_get_soft_pending_compaction_bytes_limit(
        opt: *mut crocksdb_options_t,
    ) -> usize;
}
extern "C" {
    pub fn crocksdb_options_set_hard_pending_compaction_bytes_limit(
        opt: *mut crocksdb_options_t,
        v: usize,
    );
}
extern "C" {
    pub fn crocksdb_options_get_hard_pending_compaction_bytes_limit(
        opt: *mut crocksdb_options_t,
    ) -> usize;
}
extern "C" {
    pub fn crocksdb_options_set_rate_limit_delay_max_milliseconds(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uint,
    );
}
extern "C" {
    pub fn crocksdb_options_set_max_manifest_file_size(arg1: *mut crocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn crocksdb_options_set_table_cache_numshardbits(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_set_writable_file_max_buffer_size(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_set_arena_block_size(arg1: *mut crocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn crocksdb_options_set_use_fsync(arg1: *mut crocksdb_options_t, arg2: libc::c_int);
}
extern "C" {
    pub fn crocksdb_options_set_db_paths(
        arg1: *mut crocksdb_options_t,
        arg2: *const *const libc::c_char,
        arg3: *const usize,
        arg4: *const u64,
        arg5: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_get_db_paths_num(arg1: *mut crocksdb_options_t) -> usize;
}
extern "C" {
    pub fn crocksdb_options_get_db_path(
        arg1: *mut crocksdb_options_t,
        index: usize,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_options_get_path_target_size(
        arg1: *mut crocksdb_options_t,
        index: usize,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_options_set_db_log_dir(
        arg1: *mut crocksdb_options_t,
        arg2: *const libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_options_set_wal_dir(arg1: *mut crocksdb_options_t, arg2: *const libc::c_char);
}
extern "C" {
    pub fn crocksdb_options_set_wal_ttl_seconds(arg1: *mut crocksdb_options_t, arg2: u64);
}
extern "C" {
    pub fn crocksdb_options_set_wal_size_limit_mb(arg1: *mut crocksdb_options_t, arg2: u64);
}
extern "C" {
    pub fn crocksdb_options_set_manifest_preallocation_size(
        arg1: *mut crocksdb_options_t,
        arg2: usize,
    );
}
extern "C" {
    pub fn crocksdb_options_set_allow_mmap_reads(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_allow_mmap_writes(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_is_fd_close_on_exec(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_skip_log_error_on_recovery(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_stats_dump_period_sec(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uint,
    );
}
extern "C" {
    pub fn crocksdb_options_set_advise_random_on_open(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_access_hint_on_compaction_start(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_set_use_adaptive_mutex(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_bytes_per_sync(arg1: *mut crocksdb_options_t, arg2: u64);
}
extern "C" {
    pub fn crocksdb_options_set_enable_pipelined_write(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_enable_multi_batch_write(
        opt: *mut crocksdb_options_t,
        v: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_unordered_write(arg1: *mut crocksdb_options_t, arg2: libc::c_uchar);
}
extern "C" {
    pub fn crocksdb_options_set_allow_concurrent_memtable_write(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_manual_wal_flush(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_enable_write_thread_adaptive_yield(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_max_sequential_skip_in_iterations(
        arg1: *mut crocksdb_options_t,
        arg2: u64,
    );
}
extern "C" {
    pub fn crocksdb_options_set_disable_auto_compactions(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_get_disable_auto_compactions(
        arg1: *const crocksdb_options_t,
    ) -> libc::c_int;
}
extern "C" {
    pub fn crocksdb_options_set_delete_obsolete_files_period_micros(
        arg1: *mut crocksdb_options_t,
        arg2: u64,
    );
}
extern "C" {
    pub fn crocksdb_options_prepare_for_bulk_load(arg1: *mut crocksdb_options_t);
}
extern "C" {
    pub fn crocksdb_options_get_memtable_factory_name(
        opt: *mut crocksdb_options_t,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_options_set_memtable_vector_rep(arg1: *mut crocksdb_options_t);
}
extern "C" {
    pub fn crocksdb_options_set_memtable_prefix_bloom_size_ratio(
        arg1: *mut crocksdb_options_t,
        arg2: f64,
    );
}
extern "C" {
    pub fn crocksdb_options_set_max_compaction_bytes(arg1: *mut crocksdb_options_t, arg2: u64);
}
extern "C" {
    pub fn crocksdb_options_set_hash_skip_list_rep(
        arg1: *mut crocksdb_options_t,
        arg2: usize,
        arg3: i32,
        arg4: i32,
    );
}
extern "C" {
    pub fn crocksdb_options_set_hash_link_list_rep(arg1: *mut crocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn crocksdb_options_set_doubly_skip_list_rep(opt: *mut crocksdb_options_t);
}
extern "C" {
    pub fn crocksdb_options_set_plain_table_factory(
        arg1: *mut crocksdb_options_t,
        arg2: u32,
        arg3: libc::c_int,
        arg4: f64,
        arg5: usize,
    );
}
extern "C" {
    pub fn crocksdb_options_set_min_level_to_compress(
        opt: *mut crocksdb_options_t,
        level: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_set_memtable_huge_page_size(arg1: *mut crocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn crocksdb_options_set_max_successive_merges(arg1: *mut crocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn crocksdb_options_set_bloom_locality(arg1: *mut crocksdb_options_t, arg2: u32);
}
extern "C" {
    pub fn crocksdb_options_set_inplace_update_support(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_inplace_update_num_locks(
        arg1: *mut crocksdb_options_t,
        arg2: usize,
    );
}
extern "C" {
    pub fn crocksdb_options_set_report_bg_io_stats(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_set_compaction_readahead_size(
        arg1: *mut crocksdb_options_t,
        arg2: usize,
    );
}
extern "C" {
    pub fn crocksdb_options_set_max_subcompactions(arg1: *mut crocksdb_options_t, arg2: u32);
}
extern "C" {
    pub fn crocksdb_options_set_wal_bytes_per_sync(arg1: *mut crocksdb_options_t, arg2: u64);
}
pub const crocksdb_tolerate_corrupted_tail_records_recovery: _bindgen_ty_2 = 0;
pub const crocksdb_absolute_consistency_recovery: _bindgen_ty_2 = 1;
pub const crocksdb_point_in_time_recovery: _bindgen_ty_2 = 2;
pub const crocksdb_skip_any_corrupted_records_recovery: _bindgen_ty_2 = 3;
pub type _bindgen_ty_2 = u32;
extern "C" {
    pub fn crocksdb_options_set_wal_recovery_mode(arg1: *mut crocksdb_options_t, arg2: libc::c_int);
}
pub const crocksdb_no_compression: _bindgen_ty_3 = 0;
pub const crocksdb_snappy_compression: _bindgen_ty_3 = 1;
pub const crocksdb_zlib_compression: _bindgen_ty_3 = 2;
pub const crocksdb_bz2_compression: _bindgen_ty_3 = 3;
pub const crocksdb_lz4_compression: _bindgen_ty_3 = 4;
pub const crocksdb_lz4hc_compression: _bindgen_ty_3 = 5;
pub type _bindgen_ty_3 = u32;
extern "C" {
    pub fn crocksdb_options_set_compression(arg1: *mut crocksdb_options_t, arg2: libc::c_int);
}
extern "C" {
    pub fn crocksdb_options_get_compression(arg1: *mut crocksdb_options_t) -> libc::c_int;
}
pub const crocksdb_level_compaction: _bindgen_ty_4 = 0;
pub const crocksdb_universal_compaction: _bindgen_ty_4 = 1;
pub const crocksdb_fifo_compaction: _bindgen_ty_4 = 2;
pub type _bindgen_ty_4 = u32;
extern "C" {
    pub fn crocksdb_options_set_compaction_style(arg1: *mut crocksdb_options_t, arg2: libc::c_int);
}
extern "C" {
    pub fn crocksdb_options_set_universal_compaction_options(
        arg1: *mut crocksdb_options_t,
        arg2: *mut crocksdb_universal_compaction_options_t,
    );
}
extern "C" {
    pub fn crocksdb_options_set_fifo_compaction_options(
        opt: *mut crocksdb_options_t,
        fifo: *mut crocksdb_fifo_compaction_options_t,
    );
}
extern "C" {
    pub fn crocksdb_options_set_ratelimiter(
        opt: *mut crocksdb_options_t,
        limiter: *mut crocksdb_ratelimiter_t,
    );
}
extern "C" {
    pub fn crocksdb_options_set_vector_memtable_factory(
        opt: *mut crocksdb_options_t,
        reserved_bytes: u64,
    );
}
pub const compaction_by_compensated_size: _bindgen_ty_5 = 0;
pub const compaction_by_oldest_largestseq_first: _bindgen_ty_5 = 1;
pub const compaction_by_oldest_smallest_seq_first: _bindgen_ty_5 = 2;
pub const compaction_by_min_overlapping_ratio: _bindgen_ty_5 = 3;
pub type _bindgen_ty_5 = u32;
extern "C" {
    pub fn crocksdb_options_set_compaction_priority(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_delayed_write_rate(arg1: *mut crocksdb_options_t, arg2: u64);
}
